Add JSON-RPC MCP server

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ serde_yaml = "0.9"
 serde_json = "1.0"
 walkdir = "2"
 leptos = { version = "0.5", optional = true }
+tokio = { version = "1", features = ["full"] }
+rust-mcp-schema = "0.7"
+
+[[bin]]
+name = "mcp_server"
+path = "src/server.rs"
