--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,5 +15,7 @@ jobs:
         with:
           toolchain: stable
           override: true
-      - run: cargo build --verbose
-      - run: cargo run --release
+          components: clippy, rustfmt
+      - run: cargo fmt --all -- --check
+      - run: cargo clippy --all-targets --all-features -D warnings
+      - run: cargo test
