--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,6 @@ jobs:
           override: true
           components: clippy, rustfmt
       - run: cargo fmt --all -- --check
-      - run: cargo clippy --all-targets --all-features -D warnings
+      - run: cargo check --tests --benches
+      - run: cargo clippy --all-targets --all-features -- -D warnings
       - run: cargo test
