--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "avatars_generator"
 version = "0.1.0"
 edition = "2024"
+default-run = "avatars_generator"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
