--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,6 +29,9 @@ jobs:
       - run: |
           mkdir -p public/avatars
           cp -r avatars/* public/avatars/
+          cp index.json public/index.json
+          cp INSTRUCTIONS.md public/index.md
+          cp BASE_AGENTS.md public/BASE_AGENTS.md
       - uses: actions/configure-pages@v5
       - uses: actions/upload-pages-artifact@v3
         with:
