Move remote configuration into repo setup script

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,10 +32,10 @@ jobs:
       - run: |
           mkdir -p public/avatars
           cp -r avatars/* public/avatars/
-          cp BASE_AGENTS.md INSTRUCTIONS.md mcp.json public/
+          cp Agents.md INSTRUCTIONS.md mcp.json public/
           cp avatars/index.json public/index.json
           {
-            cat BASE_AGENTS.md
+            cat Agents.md
             echo
             echo "## Avatars"
             for f in avatars/*.md; do
