Grant workflow pull request permissions

--- a/.github/workflows/markdown-automerge.yml
+++ b/.github/workflows/markdown-automerge.yml
@@ -11,6 +11,7 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
 
 concurrency:
   group: markdown-automerge-${{ github.event.pull_request.number || github.ref }}
