--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "avatars-core"
+name = "codex-tools-core"
 version = "0.1.0"
 edition = "2024"
+default-run = "generate-catalog"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -10,3 +11,7 @@ serde_json = "1.0"
 
 [dev-dependencies]
 tempfile = "3"
+
+[[bin]]
+name = "generate-catalog"
+path = "src/bin/generate_catalog.rs"
