--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -33,6 +33,13 @@ jobs:
           mkdir -p public/avatars
           cp -r avatars/* public/avatars/
           cp AGENTS.md INSTRUCTIONS.md README.md public/
+          cp init-container.sh init-ephemeral-container.sh pre-task.sh public/
+          mkdir -p public/scripts/lib
+          cp scripts/bootstrap-cached-container.sh \
+             scripts/bootstrap-ephemeral-container.sh \
+             scripts/refresh-cached-container.sh \
+             public/scripts/
+          cp scripts/lib/container-bootstrap-common.sh public/scripts/lib/
           mkdir -p public/workflows
           cp .github/workflows/codex-cleanup.yml public/workflows/
           cp avatars/catalog.json public/index.json
@@ -79,6 +86,13 @@ jobs:
             "INSTRUCTIONS.md"
             "README.md"
             "workflows/codex-cleanup.yml"
+            "init-container.sh"
+            "init-ephemeral-container.sh"
+            "pre-task.sh"
+            "scripts/bootstrap-cached-container.sh"
+            "scripts/bootstrap-ephemeral-container.sh"
+            "scripts/refresh-cached-container.sh"
+            "scripts/lib/container-bootstrap-common.sh"
           )
           sleep 10
           for path in "${paths[@]}"; do
