--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -53,7 +53,11 @@ jobs:
       - name: Smoke test published endpoints
         run: |
           set -euo pipefail
-          base_url="https://qqrm.github.io/codex-tools"
+          owner="${{ github.event.workflow_run.repository.owner.login }}"
+          repo="${{ github.event.workflow_run.repository.name }}"
+          owner="$(printf '%s' "${owner}" | tr '[:upper:]' '[:lower:]')"
+          repo="$(printf '%s' "${repo}" | tr '[:upper:]' '[:lower:]')"
+          base_url="https://${owner}.github.io/${repo}"
           paths=(
             "index.json"
             "avatars.json"
