--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -6,7 +6,7 @@ default-run = "generate-catalog"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.9"
+serde_yaml_ng = "0.10"
 serde_json = "1.0"
 
 [dev-dependencies]
