--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2024"
 default-run = "generate-catalog"
 
 [dependencies]
+anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml_ng = "0.10"
 serde_json = "1.0"
+thiserror = "1.0"
 
 [dev-dependencies]
 tempfile = "3"
