--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy rustfmt
-      - run: cargo test -p avatars-core
+      - run: cargo test -p personas-core
       - run: ./scripts/build-pages.sh
       - run: ./scripts/validate-pages.sh
       - uses: actions/configure-pages@v5
@@ -52,4 +52,4 @@ jobs:
     steps:
       - name: Smoke test published endpoints
         run: >
-          bash -euo pipefail -c 'repo_ref="${GITHUB_REPOSITORY}"; owner="${repo_ref%%/*}"; repo="${repo_ref#*/}"; owner="${owner,,}"; repo="${repo,,}"; base_url="https://${owner}.github.io/${repo}"; sleep 10; for path in index.json avatars.json AGENTS.md docs/INSTRUCTIONS.md README.md docs/SPECIFICATION.md static.json workflows/codex-cleanup.yml scripts/BaseInitialization.sh scripts/FullInitialization.sh scripts/PretaskInitialization.sh; do echo "Validating ${base_url}/${path}"; for attempt in 1 2 3 4 5; do if curl --fail --silent --show-error --location "${base_url}/${path}" > /dev/null; then echo "  OK on attempt ${attempt}"; break; fi; if [ "${attempt}" -eq 5 ]; then echo "  Failed after ${attempt} attempts" >&2; exit 1; fi; sleep 5; done; done'
+          bash -euo pipefail -c 'repo_ref="${GITHUB_REPOSITORY}"; owner="${repo_ref%%/*}"; repo="${repo_ref#*/}"; owner="${owner,,}"; repo="${repo,,}"; base_url="https://${owner}.github.io/${repo}"; sleep 10; for path in index.json personas.json AGENTS.md docs/INSTRUCTIONS.md README.md docs/SPECIFICATION.md static.json workflows/codex-cleanup.yml scripts/BaseInitialization.sh scripts/FullInitialization.sh scripts/PretaskInitialization.sh; do echo "Validating ${base_url}/${path}"; for attempt in 1 2 3 4 5; do if curl --fail --silent --show-error --location "${base_url}/${path}" > /dev/null; then echo "  OK on attempt ${attempt}"; break; fi; if [ "${attempt}" -eq 5 ]; then echo "  Failed after ${attempt} attempts" >&2; exit 1; fi; sleep 5; done; done'
