--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
       - run: cargo check --tests --benches
       - run: cargo clippy --all-targets --all-features -- -D warnings
       - run: cargo test
+      - run: cargo run -p personas-core --bin generate-persona-audit -- --check
       - name: Generate personas catalog
         run: cargo run --release -p personas-core
       - name: Verify personas catalog committed
