--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,6 +28,9 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy rustfmt
+      - run: cargo fmt --all -- --check
+      - run: cargo check --tests --benches
+      - run: cargo clippy --all-targets --all-features -- -D warnings
       - run: cargo test -p personas-core
       - run: ./scripts/build-pages.sh
       - run: ./scripts/validate-pages.sh
