--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,20 +18,60 @@ env:
 
 jobs:
   build:
+    name: Build, test and pages
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy rustfmt
-      - run: cargo fmt --all -- --check
-      - run: cargo check --tests --benches
-      - run: cargo clippy --all-targets --all-features -- -D warnings
-      - run: cargo test
-      - run: cargo run -p personas-core --bin generate-persona-audit -- --check
+
+      - name: Cache cargo registry
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-registry-
+
+      - name: Cache cargo build
+        uses: actions/cache@v4
+        with:
+          path: target
+          key: ${{ runner.os }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-build-
+
+      - name: Run cargo fmt
+        run: cargo fmt --all -- --check
+
+      - name: Run cargo check
+        run: cargo check --tests --benches
+
+      - name: Run cargo clippy
+        run: cargo clippy --all-targets --all-features -- -D warnings
+
+      - name: Run cargo test
+        run: cargo test
+
+      - name: Check personas audit
+        run: cargo run -p personas-core --bin generate-persona-audit -- --check
+
       - name: Generate personas catalog
         run: cargo run --release -p personas-core
+
       - name: Verify personas catalog committed
         run: git diff --exit-code personas/catalog.json
-      - run: ./scripts/build-pages.sh
-      - run: ./scripts/validate-pages.sh
+
+      - name: Build pages
+        run: ./scripts/build-pages.sh
+
+      - name: Validate pages
+        run: ./scripts/validate-pages.sh
