--- a/.github/workflows/codex-cleanup.yml
+++ b/.github/workflows/codex-cleanup.yml
@@ -18,10 +18,12 @@ env:
 
 jobs:
   cleanup:
-    name: cleanup
+    name: Cleanup Codex branches and PRs
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+
     steps:
-      - name: prune codex branches and pull requests
+      - name: Prune Codex branches and pull requests
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
